tests/codegen/fail/enum/derive_no_fields.stderr
error: GraphQL enum expects at least one field
 --> fail/enum/derive_no_fields.rs:2:1
  |
2 | pub enum Test {}
  | ^^^^^^^^^^^^^^^^
  |
  = note: https://spec.graphql.org/June2018/#sec-Enums
